[tool.poetry]
name = "pytorch-zero-lit"
version = "0.2.3"
description = "LiT: Zero-Shot Transfer with Locked-image text Tuning"
authors = ["Richard Löwenström <samedii@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samedii/pytorch-zero-lit"
packages = [
    { include = "lit" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lantern = "^0.12.1"
transformers = "^4.22.1"
onnxruntime = "^1.12.1"
opencv-python = "^4.4.0,!=4.6.0.66"
onnx2torch = "^1.5.3"
wget = "^3.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipykernel = "^6.15.3"
ipywidgets = "^8.0.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".venv __pycache__ .git .pytest_cache"
testpaths = [
    "lit/lit.py",
]
python_files = "*.py"
